# cognis-code

./: AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
cognis_code/: __init__.py  __main__.py  cli.py  connect.py  ide.py  models.py  serve.py
examples/: doctor.txt  help.txt  version.txt
integrations/: webhook.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
vscode-extension/: .vscodeignore  CHANGELOG.md  PUBLISHING.md  README.md  extension.js  package.json
